--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
 /*Página de Estilos*/
 body{
   background-color: blue;
+
+}
+
+h1{
+  text-align: center;
+  font-size: 50px;
+}
+
+p{
+  font-size: 25px;
 }
