--- a/style.css
+++ b/style.css
@@ -4,12 +4,17 @@ body{
 
 }
 
-h1{
+header{
+  background-color: white;
   text-align: center;
   font-size: 50px;
+  font-family: Arial, Helvetica, sans-serif;
+  border: 10px;
+  border-radius: 25xp;
 }
 
 p{
   text-align: center;
   font-size: 25px;
 }
+
